# ethicline

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: dependencies.py  rbac.py
backend/src/app/api/v1/: auth.py  roles.py  router.py  users.py
backend/src/app/core/: config.py  logging.py  security.py
backend/src/app/crud/: base.py  crud_roles.py  crud_users.py
backend/src/app/db/: engine.py
backend/src/app/db/migrations/: env.py
backend/src/app/db/migrations/versions/: 001_initial_schema.py  002_seed_rbac.py
backend/src/app/middleware/: error_handler.py
backend/src/app/models/: __init__.py  user.py
backend/src/app/schemas/: role.py  user.py
backend/src/app/services/: audit_service.py  permission_service.py
docs/: README.md  architecture.md  roadmap.md  setup.md
docs/auth/: 01-registrierung.md  02-login-flow.md  03-admin-funktionen.md  README.md
docs/deployment/: README.md
docs/rbac/: 01-rollenkatalog.md  02-permission-katalog.md  03-backend-implementation.md  README.md
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: apple-icon.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/config/: navigation.ts
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api-client.ts  auth.ts  utils.ts
frontend/src/stores/: auth-store.ts
frontend/src/types/: api.ts
(+11 files in other folders)
